--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odit unde sapiente ducimus reprehenderit atque,
+        necessitatibus quaerat dolore, cumque quos et expedita. Odio voluptatum ducimus iusto voluptas, beatae enim
+        necessitatibus.</p>
 </body>
 
 </html>
